# lis-spot-utils

./: .pylint_rc  .spot_utils_pylintrc  README.md  isort.cfg  mypy.ini  pyproject.toml  pytest.ini  run_autoformat.sh  run_ci_checks.sh  setup.py
.github/worflows/: ci.yml
.github/workflows/: ci.yml
examples/: scan_scene.py  scan_scene_segment.py
spot_utils/: hello_world.py
spot_utils/controllers/: arm.py  arm_control.py  startup.py
spot_utils/perception/: capture.py  conversion.py  segmentation.py
spot_utils/perception/vision_utils/semseg/: eval_multipro.py  interface.py  test.py  train.py
spot_utils/perception/vision_utils/semseg/mit_semseg/: dataset.py
spot_utils/perception/vision_utils/semseg/mit_semseg/models/: mobilenet.py  resnext.py
spot_utils/structures/: image.py  robot.py
src/controllers/: arm.py  capture.py  startup.py
src/perception/: conversion.py  segmentation.py
src/perception/semseg/: interface.py
src/structures/: image.py  robot.py
